# sabre

./: .gitignore  AGENTS.md  ARCH_IMPROVEMENTS.md  EMPTY_CONTENT.md  README.md  RENAME.md  pyproject.toml
config/exploits/: instruction_adherence.yaml  secret_extraction.yaml  system_prompt_revelation.yaml
config/models/: deepseek-r1-0528-qwen3-8b.yaml  gemma-3-27b.yaml  gpt-oss-20b.yaml  llama-3.3-70b.yaml  llama2-7b.yaml  mistral-7b.yaml  qwen3-4b-thinking-2507.yaml  zephyr-7b.yaml
config/personas/: direct_questioner.yaml  prompt_injector.yaml  social_engineer.yaml
config/tournaments/: full_3x3.yaml  full_4x4.yaml  mvp_basic.yaml  quick_test.yaml
hooks/: __init__.py  gemma_prompt_prep.py  qwen_strip_think.py
src/saber/: __init__.py  cli.py  config_loader.py
src/saber.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/saber/adapters/: __init__.py  anthropic_adapt.py  base.py  dummy.py  gemini_adapt.py  lmstudio_adapt.py  ollama.py  ollama_adapt.py  openai_adapt.py  registry.py  util.py
src/saber/application/: __init__.py  context.py  (+1 more)
src/sabre/: __init__.py  cli.py  config_loader.py
src/sabre.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_adapter_selection.py  test_adapters_interface.py  test_anthropic_adapter_smoke.py  test_cli_commands.py  test_config_contracts.py  test_config_validation.py  test_detection_primitives.py  test_empty_response.py  test_gemini_adapter_smoke.py  test_hooks_integration.py  test_local_adapters.py  test_openai_adapter_smoke.py  test_timestamped_output_dir.py  test_utils.py
(+46 files in other folders)
